# bagu-killer

./: .env.example  .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
config/: keywords.txt
config/prompts/: image_ocr.jinja2  post_classification.jinja2  question_extraction.jinja2  question_merge.jinja2
scripts/: generate_kaomian_markdown.py  run_daily_sync.sh
sql/: init.sql
src/ai_offer_catcher/: app_settings.py  artifacts.py  cli.py  pipeline.py  utils.py  web_app.py
src/ai_offer_catcher/crawler/: media_crawler_adapter.py  xhs_crawler.py
src/ai_offer_catcher/db/: connection.py  repository.py
src/ai_offer_catcher/llm/: qwen_embedding.py  qwen_vl.py
src/ai_offer_catcher/models/: schemas.py
src/ai_offer_catcher/reports/: generate.py
src/ai_offer_catcher/stages/: classify.py  extract.py  merge.py  ocr.py
tests/: test_models.py  test_utils.py
